Remove System.err from to.el.stages.deduce